# OpenInbox

./: com.hackeradam.openinbox.json  meson.build
data/: com.hackeradam.openinbox.appdata.xml.in  com.hackeradam.openinbox.desktop.in  com.hackeradam.openinbox.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.h.in  main.c  meson.build  openinbox-application.c  openinbox-application.h  openinbox.gresource.xml
src/gtk/: #openinbox-window.ui#  openinbox-window.c  openinbox-window.h  openinbox-window.ui
